NavBar and Alert Section Dynamic Done

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         <section id="categories-container" class="categories-container d-flex justify-content-between container mt-5">
 
         </section>
+        <section class="container mt-3">
+          <div class="alert alert-light" role="alert">
+            <span id="news-count">0</span> items found for category <span id="category-name"></span>
+          </div>
+        </section>
     </main>
 
 
