--- a/index.html
+++ b/index.html
@@ -37,11 +37,65 @@
         <section id="categories-container" class="categories-container d-flex justify-content-between container mt-5">
 
         </section>
+
+        <!-- Alert section start -->
         <section class="container mt-3">
           <div class="alert alert-light" role="alert">
             <span id="news-count">0</span> items found for category <span id="category-name"></span>
           </div>
         </section>
+        <!-- Alert Section Ends -->
+
+        <!-- Sortion Options Section -->
+        <section class="container d-flex justify-content-between" id="">
+          <div class="d-flex gap-2 justify-content-center align-items-center">
+            <p class="p-0 m-0">Sort By: </p>
+            <div class="form-floating">
+              <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+                <option selected>Default</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+              </select>
+            </div>
+          </div>
+
+          <div>
+            <button type="button" class="btn btn-primary">Todays Pic</button>
+            <button type="button" class="btn btn-outline">Trending</button>
+          </div>
+        </section>
+         <!-- Sortion Options Section End-->
+         <section class="all-news container my-4" id="all-news">
+          
+         </section>
+
+         <!-- Modal body -->
+         <section>
+          <!-- Button trigger modal -->
+          <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+         Launch demo modal
+          </button> -->
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    ...
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+         </section>
     </main>
 
 
